--- a/package.json
+++ b/package.json
@@ -1,11 +1,36 @@
 {
-  "name": "@coderan/ui",
-  "version": "1.0.0",
-  "description": "Beautiful and component-rich UI library",
-  "main": "src/index.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Eran Machiels",
-  "license": "ISC"
+    "name": "@coderan/ui",
+    "version": "1.0.0",
+    "description": "Beautiful and component-rich UI library",
+    "main": "src/index.ts",
+    "scripts": {
+        "build": "tsc -p tsconfig-build.json",
+        "test": "jest --config=jest.config.json",
+        "test-coverage": "jest --config=jest.config.json --collectCoverage"
+    },
+    "author": "Eran Machiels",
+    "license": "ISC",
+    "devDependencies": {
+        "typescript": "^4.0.3",
+        "@babel/plugin-proposal-class-properties": "^7.10.4",
+        "@babel/preset-env": "^7.11.0",
+        "@babel/preset-react": "^7.10.4",
+        "@babel/preset-typescript": "^7.10.4",
+        "@types/enzyme": "^3.10.5",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
+        "@types/jest": "^26.0.10",
+        "@types/react": "^16.9.46",
+        "@types/react-is": "^16.7.1",
+        "@typescript-eslint/eslint-plugin": "^4.5.0",
+        "@typescript-eslint/parser": "^4.5.0",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.3",
+        "eslint": "^7.7.0",
+        "eslint-plugin-react": "^7.20.6",
+        "flush-promises": "^1.0.2",
+        "react-scripts": "^4.0.0",
+        "react-test-renderer": "^17.0.1",
+        "ts-loader": "^8.0.2",
+        "webpack-cli": "^4.1.0"
+    }
 }
