Added test site

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,7 @@
     "exclude": [
         "node_modules",
         "dist",
-        "setupTests.ts"
+        "setupTests.ts",
+        "www"
     ]
 }
