--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "scripts": {
         "build": "tsc -p tsconfig-build.json",
         "test": "jest --config=jest.config.json",
-        "test-coverage": "jest --config=jest.config.json --collectCoverage"
+        "test-coverage": "jest --config=jest.config.json --collectCoverage",
+        "dev": "webpack serve --config www/webpack.config.js"
     },
     "author": "Eran Machiels",
     "license": "ISC",
     "devDependencies": {
-        "typescript": "^4.0.3",
         "@babel/plugin-proposal-class-properties": "^7.10.4",
         "@babel/preset-env": "^7.11.0",
         "@babel/preset-react": "^7.10.4",
@@ -23,14 +23,22 @@
         "@types/react-is": "^16.7.1",
         "@typescript-eslint/eslint-plugin": "^4.5.0",
         "@typescript-eslint/parser": "^4.5.0",
+        "dart-sass": "^1.25.0",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.3",
         "eslint": "^7.7.0",
         "eslint-plugin-react": "^7.20.6",
         "flush-promises": "^1.0.2",
+        "react-dom": "^17.0.1",
         "react-scripts": "^4.0.0",
         "react-test-renderer": "^17.0.1",
         "ts-loader": "^8.0.2",
-        "webpack-cli": "^4.1.0"
+        "typescript": "^4.0.3",
+        "webpack-cli": "^4.1.0",
+        "webpack-dev-server": "^3.11.0"
+    },
+    "dependencies": {
+        "clsx": "^1.1.1",
+        "react": "^17.0.1"
     }
 }
