--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
         "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/jest": "^26.0.10",
         "@types/react": "^16.9.46",
+        "@types/react-dom": "^16.9.8",
         "@types/react-is": "^16.7.1",
         "@typescript-eslint/eslint-plugin": "^4.5.0",
         "@typescript-eslint/parser": "^4.5.0",
+        "babel-plugin-root-import": "^6.6.0",
         "dart-sass": "^1.25.0",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.3",
