--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
         "module": "esnext",
         "target": "es5",
         "lib": [
-            "es6",
-            "dom",
-            "es2016",
-            "es2017"
+            "ES6",
+            "DOM",
+            "ES2016",
+            "ES2017"
         ],
         "sourceMap": true,
         "jsx": "react",
