--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
         "webpack-dev-server": "^3.11.0"
     },
     "dependencies": {
+        "@popperjs/core": "^2.6.0",
         "clsx": "^1.1.1",
+        "framer-motion": "^3.1.1",
         "react": "^16.14.0"
     }
 }
