--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
         "clsx": "^1.1.1",
         "framer-motion": "^3.1.1",
         "react": "^16.14.0"
-    }
+    },
+    "files": [
+        "dist"
+    ]
 }
