--- a/jest.config.json
+++ b/jest.config.json
@@ -1,6 +1,3 @@
 {
-    "setupFilesAfterEnv": ["./setupTests.ts"],
-    "moduleNameMapper": {
-        "@/(.*)": "<rootDir>/src/$1"
-    }
+    "setupFilesAfterEnv": ["./setupTests.ts"]
 }
