--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,10 +30,7 @@
         "esModuleInterop": true,
         "strict": true,
         "isolatedModules": true,
-        "baseUrl": ".",
-        "paths": {
-            "@/*": ["src/*"]
-        }
+        "baseUrl": "./src"
     },
     "include": [
         "src/**/*.ts",
@@ -44,6 +41,7 @@
         "node_modules",
         "dist",
         "setupTests.ts",
-        "www"
+        "www",
+        "src/**/__tests__/*"
     ]
 }
