--- a/package.json
+++ b/package.json
@@ -18,30 +18,30 @@
         "@babel/preset-typescript": "^7.10.4",
         "@types/enzyme": "^3.10.8",
         "@types/enzyme-adapter-react-16": "^1.0.6",
-        "@types/jest": "^26.0.10",
         "@types/react": "^16.9.55",
         "@types/react-dom": "^16.9.9",
-        "@types/react-is": "^16.7.1",
         "@typescript-eslint/eslint-plugin": "^4.6.1",
         "@typescript-eslint/parser": "^4.6.1",
         "dart-sass": "^1.25.0",
+        "dotenv": "^8.2.0",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.3",
         "eslint": "^7.12.1",
         "eslint-plugin-react": "^7.20.6",
-        "flush-promises": "^1.0.2",
+        "html-webpack-plugin": "^5.2.0",
+        "jest": "^26.6.3",
         "react-dom": "^16.14.0",
-        "react-scripts": "^4.0.0",
-        "react-test-renderer": "^16.14.0",
-        "ts-loader": "^8.0.7",
         "typescript": "^4.0.5",
-        "webpack-cli": "^4.1.0",
-        "webpack-dev-server": "^3.11.0"
+        "webpack": "^5.24.2",
+        "webpack-cli": "^4.5.0",
+        "webpack-dev-server": "^3.11.2",
+        "webpack-manifest-plugin": "^3.0.0"
     },
     "dependencies": {
         "@popperjs/core": "^2.6.0",
         "clsx": "^1.1.1",
         "framer-motion": "^3.1.1",
+        "prop-types": "^15.7.2",
         "react": "^16.14.0"
     },
     "files": [
