--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
     "name": "@coderan/ui",
     "version": "0.1.0",
     "description": "Beautiful and component-rich UI library",
-    "main": "src/index.ts",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "typings": "dist/index.d.ts",
     "scripts": {
-        "build": "tsc -p tsconfig-build.json",
+        "build:css": "rimraf scss && cp -r ./src/style scss && gulp",
+        "build:js": "tsc -p tsconfig-build.json",
+        "build": "rimraf dist && npm run build:js && npm run build:css",
         "test": "jest --config=jest.config.json",
         "test-coverage": "jest --config=jest.config.json --collectCoverage",
         "dev": "webpack serve --config www/webpack.config.js"
@@ -22,15 +26,25 @@
         "@types/react-dom": "^16.9.9",
         "@typescript-eslint/eslint-plugin": "^4.6.1",
         "@typescript-eslint/parser": "^4.6.1",
-        "dart-sass": "^1.25.0",
+        "babel-loader": "^8.2.2",
+        "css-loader": "^5.1.0",
         "dotenv": "^8.2.0",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.3",
         "eslint": "^7.12.1",
         "eslint-plugin-react": "^7.20.6",
+        "file-loader": "^6.2.0",
+        "gulp": "^4.0.2",
+        "gulp-rename": "^2.0.0",
+        "gulp-sass": "^4.1.0",
+        "gulp-typescript": "^6.0.0-alpha.1",
         "html-webpack-plugin": "^5.2.0",
         "jest": "^26.6.3",
         "react-dom": "^16.14.0",
+        "rimraf": "^3.0.2",
+        "sass": "^1.32.8",
+        "sass-loader": "^11.0.1",
+        "style-loader": "^2.0.0",
         "typescript": "^4.0.5",
         "webpack": "^5.24.2",
         "webpack-cli": "^4.5.0",
