--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,7 @@
     "exclude": [
         "node_modules",
         "dist",
+        "scss",
         "setupTests.ts",
         "www",
         "src/**/__tests__/*"
