--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "author": "Eran Machiels",
     "license": "ISC",
+    "repository": "https://github.com/coderan-io/ui",
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.10.4",
         "@babel/preset-env": "^7.11.0",
