--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "build:css": "rimraf scss && cp -r ./src/style scss && gulp",
         "build:js": "tsc -p tsconfig-build.json",
-        "build": "rimraf dist && npm run build:js && npm run build:css",
+        "build": "rimraf dist && npm run build:js && npm run build:css && cp -r ./src/fonts ./dist/fonts",
         "test": "jest --config=jest.config.json",
         "test-coverage": "jest --config=jest.config.json --collectCoverage",
         "dev": "webpack serve --config www/webpack.config.js"
@@ -17,23 +17,23 @@
     "license": "ISC",
     "repository": "https://github.com/coderan-io/ui",
     "devDependencies": {
-        "@babel/plugin-proposal-class-properties": "^7.10.4",
-        "@babel/preset-env": "^7.11.0",
-        "@babel/preset-react": "^7.10.4",
-        "@babel/preset-typescript": "^7.10.4",
+        "@babel/plugin-proposal-class-properties": "^7.13.0",
+        "@babel/preset-env": "^7.13.8",
+        "@babel/preset-react": "^7.12.13",
+        "@babel/preset-typescript": "^7.13.0",
         "@types/enzyme": "^3.10.8",
         "@types/enzyme-adapter-react-16": "^1.0.6",
-        "@types/react": "^16.9.55",
-        "@types/react-dom": "^16.9.9",
-        "@typescript-eslint/eslint-plugin": "^4.6.1",
-        "@typescript-eslint/parser": "^4.6.1",
+        "@types/react": "^16.14.4",
+        "@types/react-dom": "^16.9.11",
+        "@typescript-eslint/eslint-plugin": "^4.15.2",
+        "@typescript-eslint/parser": "^4.15.2",
         "babel-loader": "^8.2.2",
         "css-loader": "^5.1.0",
         "dotenv": "^8.2.0",
         "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.3",
-        "eslint": "^7.12.1",
-        "eslint-plugin-react": "^7.20.6",
+        "enzyme-adapter-react-16": "^1.15.6",
+        "eslint": "^7.21.0",
+        "eslint-plugin-react": "^7.22.0",
         "file-loader": "^6.2.0",
         "gulp": "^4.0.2",
         "gulp-rename": "^2.0.0",
@@ -46,16 +46,16 @@
         "sass": "^1.32.8",
         "sass-loader": "^11.0.1",
         "style-loader": "^2.0.0",
-        "typescript": "^4.0.5",
+        "typescript": "^4.2.2",
         "webpack": "^5.24.2",
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^3.11.2",
         "webpack-manifest-plugin": "^3.0.0"
     },
     "dependencies": {
-        "@popperjs/core": "^2.6.0",
+        "@popperjs/core": "^2.8.6",
         "clsx": "^1.1.1",
-        "framer-motion": "^3.1.1",
+        "framer-motion": "^3.7.0",
         "prop-types": "^15.7.2",
         "react": "^16.14.0"
     },
