--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "types": "dist/index.d.ts",
     "typings": "dist/index.d.ts",
     "scripts": {
-        "build:css": "rimraf scss && cp -r ./src/style scss && gulp",
+        "build:css": "gulp",
         "build:js": "tsc -p tsconfig-build.json",
-        "build": "rimraf dist && npm run build:js && npm run build:css && cp -r ./src/fonts ./dist/fonts",
+        "build": "rimraf dist && npm run build:js && npm run build:css",
         "test": "jest --config=jest.config.json",
         "test-coverage": "jest --config=jest.config.json --collectCoverage",
         "dev": "webpack serve --config www/webpack.config.js"
@@ -54,6 +54,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.8.6",
+        "bootstrap": "^4.6.0",
         "clsx": "^1.1.1",
         "framer-motion": "^3.7.0",
         "prop-types": "^15.7.2",
